--- a/src/Components/forms/formStyles/FormStyles.module.css
+++ b/src/Components/forms/formStyles/FormStyles.module.css
@@ -1,6 +1,7 @@
 .form {
   background-color: #f2f2f2;
   padding: 2rem;
+  min-height: 650px;
   border-radius: 0.5rem;
   width: 50%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -78,7 +79,7 @@ legend {
   color: #fff;
   border-color: #2d96cd;
 }
-.positon_button_center {
+.position_button_center {
   display: flex;
   justify-content: center;
 }
@@ -111,4 +112,13 @@ button:active {
   background-color: #2d96cd;
   border-color: #2d96cd;
   color: #fff;
+}
+
+.error {
+  color: red;
+}
+@media screen and (max-width: 600px) {
+  .form {
+    width: 90%;
+  }
 }
